Was added second app for downloading zip files and extracting their contents. Also was added navigation bar for switching between apps.

--- a/app/src/main/res/layout/download_file_fragment.xml
+++ b/app/src/main/res/layout/download_file_fragment.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:id="@+id/main_lin_layout"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/download_bar"
@@ -23,5 +25,6 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
+
 
 </LinearLayout>
